; ModuleID = '/home/carl/AnghaBench/AppImageKit/src/extr_binreloc.c__br_find_exe.c'
source_filename = "/home/carl/AnghaBench/AppImageKit/src/extr_binreloc.c__br_find_exe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BR_INIT_ERROR_DISABLED = common dso_local global i32 0, align 4
@BR_INIT_ERROR_INVALID_MAPS = common dso_local global i32 0, align 4
@BR_INIT_ERROR_NOMEM = common dso_local global i32 0, align 4
@BR_INIT_ERROR_OPEN_MAPS = common dso_local global i32 0, align 4
@BR_INIT_ERROR_READ_MAPS = common dso_local global i32 0, align 4
@PATH_MAX = common dso_local global i32 0, align 4
@SSIZE_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*)* @_br_find_exe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @_br_find_exe(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = icmp ne i32* %3, null
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i32, i32* @BR_INIT_ERROR_DISABLED, align 4
  %7 = load i32*, i32** %2, align 8
  store i32 %6, i32* %7, align 4
  br label %8

8:                                                ; preds = %5, %1
  ret i8* null
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
